--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.ClickNote" parent="android:Theme.Material.NoActionBar">
-        <item name="android:colorPrimary">@color/primary</item>
-        <item name="android:colorPrimaryDark">@color/primary_variant</item>
-        <item name="android:colorAccent">@color/secondary</item>
-        
-        <!-- Status bar color. -->
+    <style name="Theme.ClickNote" parent="Theme.Material3.Dark.NoActionBar">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowLightStatusBar">false</item>
-        
-        <!-- Navigation bar color. -->
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:windowLightNavigationBar">false</item>
-        
-        <!-- Enable RTL support -->
-        <item name="android:supportsRtl">true</item>
-        <item name="android:textAlignment">viewStart</item>
-        <item name="android:layoutDirection">inherit</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
-    <style name="Theme.ClickNote.Splash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/splash_background</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_clicknote_logo</item>
+    <style name="Theme.ClickNote.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.ClickNote</item>
-        <item name="android:windowFullscreen">true</item>
     </style>
 </resources> 
